--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -759,6 +759,8 @@
             <a href="actualevaporationrateofaboilerfromitskWrating.html" class="calculator-btn">Actual Evaporation Rate Of A Boiler From Its kW Rating And The Energy Required To Make Steam Calculator</a>
 
             <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">Boiler Horse Power From Heat Transfer Area Calculator</a>
+            <a href="binomialdistributioncal.html" class="calculator-btn">Binomial Distribution Calculator</a>
+
 
             <a href="correcttheconductivityofasample.html" class="calculator-btn">Correct The Conductivity Of A Sample Calculator</a>
             <a href="costofpoorqualitycalculator.html" class="calculator-btn">Cost of Poor Quality (COPQ) Calculator</a>
@@ -775,6 +777,8 @@
             <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
 
             <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate Of Steam Through An Orifice Calculator</a>
+            <a href="overalleqipmenteffectivenes.html" class="calculator-btn">Overall Equipment Effectiveness (OEE) Calculator</a>
+
             <a href="percentageerrorwhenusingavelocity.html" class="calculator-btn">Percentage Error when using velocity Calculator</a>
             <a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
             <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
@@ -784,6 +788,8 @@
             <a href="relatingboilerpressuretoheattransferrate.html" class="calculator-btn">Relating Boiler Pressure To Heat Transfer Rate Calculator</a>
             <a href="todeterminereynoldsnumberofafluid.html" class="calculator-btn">Reynolds Number Calculator</a>
             <a href="approximationofreleationship.html" class="calculator-btn">Relation between indicate and actual flowrate calculator</a>
+            <a href="rolledthroughputyieldcalculator.html" class="calculator-btn">Rolled Throughput Yield (RTY) Calculator</a>
+
 
             
             <a href="steamconsumptionofdryingcylinders.html" class="calculator-btn">Steam Consumption Of Drying Cylinders Calculator</a>
