--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -836,6 +836,9 @@
             
 
                    <a href="secondaryfluidinlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Inlet Temperature At Any Load Calculator</a>
+                   <a href="thesecondaryinlettemprature.html" class="calculator-btn">Secondary Inlet Temperature At Any Load Calculator</a>
+                   <a href="calculatingthestallloadwithavaraibleflow.html" class="calculator-btn">Stall Load For A Variable Flow Secondary Calculator</a>
+
             
             <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
             <a href="carbonfootprintcal.html" class="calculator-btn">Travel Carbon Footprint Calculator</a>
