--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -761,6 +761,8 @@
         <div class="button-container" id="calculatorList">
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
+            <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
+
             
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
@@ -772,6 +774,9 @@
             <a href="healthyweightcalcualtor.html" class="calculator-btn">Healthy Weight Calculator</a>
 
             <a href="noiseexposturelevel.html" class="calculator-btn">Noise Exposure Level (Leq) Calculator</a>
+            <a href="proteinintakecalcualtor.html" class="calculator-btn">Protein Intake Calculator</a>
+
+
             <a href="thresholdlimitvalue.html" class="calculator-btn">Threshold Limit Value (TLV) Calculator</a>
             <a href="totalrecordableoccupationalillness.html" class="calculator-btn">Total Recordable Occupational Illness Frequency (TRCF-ILL) Calculator</a>
 
